# CREWAI_API

./: README.md
CrewAI_API/: app.py
CrewAI_API/data_crew/: README.md  pyproject.toml
CrewAI_API/data_crew/src/data_crew/: crew.py  main.py
CrewAI_API/data_crew/src/data_crew/config/: agents.yaml  tasks.yaml
CrewAI_API/data_crew/src/data_crew/csv_files/C++_Developer/: C++_Developer_2025-01-28_18-03-25.csv
CrewAI_API/data_crew/src/data_crew/csv_files/Python_Developer/: Python_Developer_2025-01-28_09-57-49.csv  Python_Developer_2025-01-28_10-58-42.csv  Python_Developer_2025-01-28_17-35-25.csv  Python_Developer_2025-01-28_17-48-35.csv  Python_Developer_2025-01-28_17-50-32.csv
CrewAI_API/data_crew/src/data_crew/json_files/C++_Developer/: C++_Developer_2025-01-28_18-03-25.json
CrewAI_API/data_crew/src/data_crew/json_files/Python_Developer/: Python_Developer_2025-01-28_09-57-49.json  Python_Developer_2025-01-28_10-58-42.json  Python_Developer_2025-01-28_17-35-25.json  Python_Developer_2025-01-28_17-48-35.json  Python_Developer_2025-01-28_17-50-32.json
CrewAI_API/templates/: add_role.html  fetch_roles.html  index.html
